Bug 916766 - Consistent theming across panels (adding webconsole and options panel). Also prevents flicker on panels while frame is loading. r=paul, ui-r=darrin
UltraBlame original commit: 699f7f667d102cacf2420019bc5778a2860a9ba5

--- a/browser/themes/linux/devtools/debugger.css
+++ b/browser/themes/linux/devtools/debugger.css
@@ -3,10 +3,6 @@
 
 
 
-#body {
-  background: #fff;
-}
-
 
 
 #sources-pane {
