--- a/browser/themes/osx/devtools/debugger.css
+++ b/browser/themes/osx/devtools/debugger.css
@@ -5,10 +5,6 @@
 
 %include ../shared.inc
 
-#body {
-  background: #fff;
-}
-
 
 
 #sources-pane {
